[package]
name = "ca-api"
version = "0.1.0"
edition = "2021"

[dependencies]
my-http-server = { tag = "0.7.1", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
    "macros",
] }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "hex",
    "base64",
    "with-tokio",
] }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }

my-settings-reader = { tag = "0.3.2", git = "https://github.com/MyJetTools/my-settings-reader.git" }

tokio = { version = "*", features = ["full"] }
async-trait = "*"

pem = "*"

serde = { version = "*", features = ["derive"] }
serde_json = "*"

my-tls = { git = "https://github.com/MyJetTools/my-tls.git", tag = "0.1.1", features = [
    "crl",
] }
openssl = "*"
pkcs12 = "*"
